--- a/Sixth/res/values/strings.xml
+++ b/Sixth/res/values/strings.xml
@@ -34,11 +34,13 @@
     <string name="anthonysPhone">570.297.4567</string>
     <string name="anthonys">Anthony\'s Bar \&amp; Grill</string>
     <string name="other">View Other Drinks</string>
-    <string name="landosHours">M-W 11AM-5PM, Th-Sat 11-1:30AM, Sun CLOSED</string>
-    <string name="changosHours">M-Sat 11AM-2AM, Sun 12PM-2AM</string>
-    <string name="anthonysHours">M-Thurs 11AM-12PM, F-Sa 11AM-2PM, Sun 10AM-8PM</string>
+    <string name="landosHours">M&#8211;W 11&#8211;5PM, Th&#8211;Sat 11&#8211;1:30AM, Sun CLOSED</string>
+    <string name="changosHours">M&#8211;Sat 11AM&#8211;2AM, Sun 12PM&#8211;2AM</string>
+    <string name="anthonysHours">M&#8211;Th 11AM&#8211;12PM, F&#8211;Sa 11AM&#8211;2PM, Sun 10AM&#8211;8PM</string>
     <string name="specials">Happy Hour Specials</string>
     <string name="setBarTester"/>
+    <string name="Hours">Hours:</string>
+    <string name="PicHolder">Pic of Bar</string>
    
 
 </resources>
