--- a/Sixth/res/values/strings.xml
+++ b/Sixth/res/values/strings.xml
@@ -72,7 +72,7 @@
     <string name="oaksContact">96 W Market Street Corning, NY 14830</string>
     <string name="oaksPhone">607.936.6367</string>
     <string name="oaksSpecials">Monday &amp; Wednesday: Tall 25oz Bud Light &amp; Labatt Blue Light $3.50\nThursday: $3 Bomb Shots\nFriday: Buckets of domestics $15 (5 beers)\nSaturday: Miller Lite 16oz $3</string>
-    <string name="oaksHours"/>
+    <string name="oaksHours">Mon-Thurs 11am-11pm\nFri-Sat 12pm-1am\nSun 12pm-11pm</string>
     <string name="oldContact">3591 Route 6, Wellsboro, PA 16901</string>
     <string name="oldPhone">814.435.6300</string>
     <string name="oldHours">Mon-Thur: 3pm- 9pm\nFri-Sun 11am-10pm</string>
